lavu/parseutils: Allow to parse >= 100 hours.

Reported and tested by gamnark.
Fixes ticket #7721.